fix(apps): read latest extension rows leniently too, cover call-site paths in test